src/app/callouts/callouts.component.css
::ng-deep .mat-card {
  border-radius: var(
    --mdc-elevated-card-container-shape,
    var(--mdc-shape-medium, 24px)
  );
}

.mat-mdc-card-header {
  background-color: white;
  align-items: center;
  font-weight: bold;
  font-style: italic;

  > .mat-mdc-card-header-text {
    text-align: center;
  }
}

.totalConferencesTracked {
  font-size: 60px;
}

.averageDiversityPercentage {
  font-size: 60px;
}

.mostRecentlyAdded {
  font-size: 25px;
}

.mat-mdc-card {
  margin: 12px;
}

.mat-mdc-card-content {
  background-color: #4d4d4d;
  color: white;
  font-weight: bold;
  text-align: center;
  height: 60px;
  width: 20vw;
}

